# mgit

./: .gitignore  ChangeLog.md  README.md  mgit.cabal  package.yaml  stack.yaml
app/: Main.hs
cbits/: git_integr.c  print_kek.c  test_ffi.c
include/: git_integr.h  my_struct.h  print_kek.h  test_ffi.h
src/: CFilesTest.hs  FfiTest.hs  Lib.hs  NativeGit.hs  Test.hs
src/Cli/: CliParser.hs
src/FFI/: CArray.hs  LibGit.hs  MyStruct.hsc  Storable.hs  TestFfi.hs
src/Foreign/: CArray.hs  CStorableWrap.hs  CVector.hs  GitFileStatusEnumTest.hsc  MyStruct.hsc  TestFfi.hs
src/Foreign/LibGit/: AnnotatedCommit.hs  Branch.hs  Checkout.hs  Commit.hs  Common.hs  Models.hs  Refs.hs  Remote.hs  Repository.hs  Status.hs
src/LibGit/: AnnotatedCommit.hs  Branch.hs  Checkout.hs  Commit.hs  Common.hs  GitApp.hs  GitFileStatus.hsc  GitFileStatusShow.hs  GitLibCommands.hs  GitStatus.hsc  LibGit.hs  LibGitApp.hs  MGitApp.hs  Models.hs  Refs.hs  Remote.hs  Repository.hs  Status.hs  Test.hs  TestGitLib.hs  Wrappers.hs
src/MGit/: BranchModels.hs  Format.hs  MonadGit.hs  MonadMGit.hs  MonadMassAction.hs  MonadMultiRepo.hs  RefModels.hs  StatusModels.hs
src/PrintTable/: Cell.hs  Print.hs  SizingStrategies.hs
src/Test/: TestExts.hs  TestFfi.hs
