cabal-version:  2.2

name:           mgit
version:        0.1.0.0
synopsis:       Multi-repo git tool
description:
    Please see the README on GitHub at <https://github.com/cattingcat/mgit#readme>
category:       git, tools, cli
homepage:       https://github.com/cattingcat/mgit#readme
bug-reports:    https://github.com/cattingcat/mgit/issues
author:         Mark M
maintainer:     mark.martynov@yahoo.com
copyright:      2019 Mark M
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

flag use-pkg-config
  default: True
  description: Use pkg-config utility

source-repository head
  type: git
  location: https://github.com/cattingcat/mgit

common shared-properties
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude MultiWayIf LambdaCase ViewPatterns OverloadedStrings NegativeLiterals NumDecimals BinaryLiterals HexFloatLiterals NumericUnderscores PartialTypeSignatures NamedWildCards ApplicativeDo Arrows PostfixOperators TupleSections DuplicateRecordFields NamedFieldPuns RecordWildCards DerivingStrategies EmptyDataDeriving StandaloneDeriving GeneralizedNewtypeDeriving DeriveGeneric DeriveFunctor DeriveAnyClass DerivingVia BangPatterns PatternSynonyms EmptyDataDecls TypeOperators LiberalTypeSynonyms DefaultSignatures GADTs MultiParamTypeClasses FunctionalDependencies KindSignatures DataKinds ScopedTypeVariables TypeApplications InstanceSigs TypeSynonymInstances FlexibleInstances FlexibleContexts ConstrainedClassMethods TypeFamilies ConstraintKinds RankNTypes PolyKinds ImplicitParams AllowAmbiguousTypes ImportQualifiedPost
  ghc-options:
    -Weverything
    -Wcompat
    -Wno-safe
    -Wno-unused-top-binds
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-unsafe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures
    -Wno-all-missed-specialisations
    -optP-Wno-nonportable-include-path

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    Cli.CliParser
    LibGit.GitLibCommands
    Test
  other-modules:
    Foreign.CArray
    Foreign.CStorableWrap
    Foreign.CVector
    Foreign.GitFileStatusEnumTest
    Foreign.LibGit.AnnotatedCommit
    Foreign.LibGit.Branch
    Foreign.LibGit.Checkout
    Foreign.LibGit.Commit
    Foreign.LibGit.Common
    Foreign.LibGit.Models
    Foreign.LibGit.Refs
    Foreign.LibGit.Remote
    Foreign.LibGit.Repository
    Foreign.LibGit.Status
    Foreign.MyStruct
    LibGit.AnnotatedCommit
    LibGit.Branch
    LibGit.Commit
    LibGit.Common
    LibGit.GitApp
    LibGit.MGitApp
    LibGit.Refs
    LibGit.Remote
    LibGit.Repository
    LibGit.Status
    MGit.BranchModels
    MGit.Format
    MGit.MonadGit
    MGit.MonadMassAction
    MGit.MonadMGit
    MGit.MonadMultiRepo
    MGit.RefModels
    MGit.StatusModels
    PrintTable.Cell
    PrintTable.Print
    PrintTable.SizingStrategies
    Test.TestExts
    Test.TestFfi
  include-dirs:
      include
  c-sources:
      cbits/test_ffi.c
      cbits/git_integr.c
  if !flag(use-pkg-config)
      extra-libraries:
          git2
  if flag(use-pkg-config)
      pkgconfig-depends:
          libgit2 >1.0.0 && <2.0.0
  build-depends:
      array
    , base
    , bytestring
    , c-storable-deriving
    , directory
    , filepath
    , mtl
    , optparse-applicative
    , process
    , tagged
    , text
    , time
    , vector

executable mgit
  import: shared-properties
  main-is: Main.hs
--  other-modules: Main
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base
    , mgit


test-suite mgit-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_mgit
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      array
    , base
    , bytestring
    , c-storable-deriving
    , directory
    , filepath
    , mgit
    , mtl
    , optparse-applicative
    , process
    , tagged
    , text
    , time
    , vector
